@@ -88,8 +88,7 @@ public class TestBeiderMorseFilter extends BaseTokenStreamTestCase {
         new int[] { 4 },
         new int[] { 1 });
   }
-  
-  @Ignore("broken: causes OOM on some strings (https://issues.apache.org/jira/browse/CODEC-132)")
+
   public void testRandom() throws Exception {
     checkRandomData(random(), analyzer, 1000 * RANDOM_MULTIPLIER); 
   }
